--- a/pages/your opinion/profilepage.html
+++ b/pages/your opinion/profilepage.html
@@ -71,7 +71,7 @@
                         </div>
                         <div class="row mt-3">
                             <div class="col-md-6"><input type="text" id="age" class="form-control"
-                                    placeholder="age" value="address" disabled></div>
+                                    placeholder="age" value="age" disabled></div>
                             <div class="col-md-6"><input type="tel" maxlength="6" id="occupation" class="form-control"
                                     placeholder="occupation" disabled>
                             </div>
