fix: fix bug in like list page

--- a/pages/admin/profile_list_page.html
+++ b/pages/admin/profile_list_page.html
@@ -128,7 +128,7 @@
 
                 <input type="submit" id="leader-submit" value="Submit">
                 <input id="closeBtn" type="button" value="close">
-                <!-- <div class="close-what" id="closeBtn">&times;</div> -->
+                <div class="close-what" id="closeBtn">&times;</div>
 
             </form>
             <!-- <button id="closeBtn">Close</button> -->
