fix: add readme for my project

--- a/pages/portfolio/stick.html
+++ b/pages/portfolio/stick.html
@@ -75,6 +75,11 @@
             border-bottom: 1px solid #333;
             transition: all 0.3s ease;
         }
+        #sidebar .list-items li img{
+            width: 200px;
+            height: 250px;
+            padding-top: 20px;
+        }
 
         #sidebar .list-items li:hover {
             border-top: 1px solid transparent;
@@ -147,12 +152,12 @@
     <div class="wrapper">
         <nav id="sidebar">
      
-                <div class="icons">
+                <!-- <div class="icons">
                     <a href="#"><i class="fab fa-facebook-f"></i></a>
                     <a href="#"><i class="fab fa-twitter"></i></a>
                     <a href="#"><i class="fab fa-github"></i></a>
                     <a href="#"><i class="fab fa-youtube"></i></a>
-                </div>
+                </div> -->
             </ul> 
         </nav>
     </div>
