feat: some feature add my project

--- a/pages/admin/manifesto_create.html
+++ b/pages/admin/manifesto_create.html
@@ -121,9 +121,9 @@
 
         <div class="row">
             <div class="col-sm-6">
-                <form id="menifesto_form">
+                <form id="manifesto_form">
                     Title of Menifesto:<br>
-                    <input type="text" id="menifest_title" placeholder="Title of Menifesto" required >
+                    <input type="text" id="manifesto_title" placeholder="Title of Menifesto" required >
             </div>
             <div class="col-sm-6">
                 stage of Menifesto:<br>
@@ -137,7 +137,7 @@
             </div>
             <div class="col-sm-6">
                 status:
-                <select class="form-select" aria-label="Default select example" id="mainfesto-status" required pattern="[A-Za-z]">
+                <select class="form-select" aria-label="Default select example" id="manifesto-status" required pattern="[A-Za-z]">
                     <option selected>Enter your opinion</option>
                     <option value="complete">complte</option>
                     <option value="bending">bending</option>
