--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container" id="container">
         <div class="form-container sign-up-container">
             <form id="register">
-                <h1>Create Account</h1>
+                <h1>Sign up</h1>
                 <div class="social-container">
 
                     <a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
